force-app/main/default/objects/Creditsafe_Address__c/Creditsafe_Address__c.object-meta.xml
<CustomObject>
    <description>A creditsafe address of the business</description>
    <label>Creditsafe Address</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>