force-app/main/default/objects/Creditsafe_Address__c/fields/Business_Data__c.field-meta.xml
<CustomField>
    <fullName>Business_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Basic information about a company.</description>
    <label>Business Data</label>
    <referenceTo>Business_Dossier__c</referenceTo>
    <relationshipLabel>Creditsafe Addresses</relationshipLabel>
    <relationshipName>Creditsafe_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>