force-app/main/default/objects/Creditsafe_Address__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>The Country of the Address.</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>