force-app/main/default/objects/Creditsafe_Address__c/fields/Creditsafe_Company_Banker__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Banker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creditsafe Company Banker</label>
    <referenceTo>Creditsafe_Company_Banker__c</referenceTo>
    <relationshipLabel>Creditsafe Addresses</relationshipLabel>
    <relationshipName>Banker_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>