force-app/main/default/objects/Creditsafe_Address__c/fields/Creditsafe_Company_Share_Holder__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Share_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creditsafe Company Share Holder</label>
    <referenceTo>Creditsafe_Company_Share_Holder__c</referenceTo>
    <relationshipLabel>Creditsafe Addresses</relationshipLabel>
    <relationshipName>Share_Holder_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>