force-app/main/default/objects/Creditsafe_Address__c/fields/Creditsafe_Person_Director__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Person_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creditsafe Person Director</label>
    <referenceTo>Creditsafe_Person_Director__c</referenceTo>
    <relationshipLabel>Creditsafe Addresses</relationshipLabel>
    <relationshipName>Director_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>